--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoPOOG5">
         <activity
+            android:name=".appServicio.Servicio_editar_agregar"
+            android:exported="false" />
+        <activity
+            android:name=".appServicio.Servicio_main"
+            android:exported="false" />
+        <activity
+            android:name=".appServicio.item_servicio"
+            android:exported="false" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
