--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
+        android:debuggable="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,14 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoPOOG5">
         <activity
+            android:name=".activities.activitiesCliente.ClientesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.activitiesCliente.AgregarCliente"
+            android:exported="false" />
+        <activity
             android:name=".activities.appServicio.Servicio_editar_agregar"
             android:exported="false" />
         <activity
             android:name=".activities.appServicio.Servicio_main"
             android:exported="false" />
-        <activity
-            android:name=".appServicio.item_servicio"
-            android:exported="false" />
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
@@ -29,9 +34,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activities.activitiesCliente.ClientesActivity"
-            android:exported="false" />
+
     </application>
 
 </manifest>
