--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
-        android:debuggable="true"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -24,7 +23,12 @@
         <activity
             android:name=".activities.appServicio.Servicio_main"
             android:exported="false" />
-
+        <activity
+            android:name=".activities.activitiesProveedor.AgregarProveedor"
+            android:exported="false" />
+        <activity
+            android:name=".activities.activitiesProveedor.ProveedorActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
