Implementación 1.0 Opción Administrar Técnicos
Creación Layouts para Pantallas de técnicos, implementación de activities, además de funcionalidad de botón Eliminar en item_tecnicos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:name=".activities.activitiesProveedor.ProveedorActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.activitiesTecnico.TecnicoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.activitiesTecnico.AgregarTecnico"
+            android:exported="false" />
+        <activity
             android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
