--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ProyectoPOOG5">
+        android:theme="@style/Theme.ProyectoPOOG5" >
+        <activity
+            android:name=".activities.activitiesServicio.EditarServicio"
+            android:exported="false" />
         <activity
             android:name=".activities.activitiesCliente.ClientesActivity"
             android:exported="false" />
@@ -18,10 +21,10 @@
             android:name=".activities.activitiesCliente.AgregarCliente"
             android:exported="false" />
         <activity
-            android:name=".activities.appServicio.Servicio_editar_agregar"
+            android:name=".activities.activitiesServicio.AgregarServicio"
             android:exported="false" />
         <activity
-            android:name=".activities.appServicio.Servicio_main"
+            android:name=".activities.activitiesServicio.ServicioActivity"
             android:exported="false" />
         <activity
             android:name=".activities.activitiesProveedor.AgregarProveedor"
@@ -37,14 +40,13 @@
             android:exported="false" />
         <activity
             android:name=".activities.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
