--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ProyectoPOOG5">
         <activity
+            android:name=".activities.activitiesFactura.DetalleFacturaActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.activitiesFactura.AgregarFactura"
             android:exported="false" />
         <activity
